--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,4 +1,4 @@
-appname = inscripcion_crud
+appname = ${API_NAME} 
 PGdb   = ${INSCRIPCION_CRUD__PGDB}
 PGpass = ${INSCRIPCION_CRUD__PGPASS}
 PGurls = ${INSCRIPCION_CRUD__PGURLS}
